--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -78,11 +78,11 @@
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/navegacion.css"/>
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/biblioteca.css"/>
 <!--        <script src="https://www.youtube.com/iframe_api"></script>-->
-
+        <!--  Revisar Aqui activities   -->
         <div class="uk-container padding-inferior">
             <div data-uk-filter="target: .js-filter">
                 <h:panelGroup layout="block" styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom" pt:uk-grid="">
-                    <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="tareaActvidadModelo" varStatus="conta">
+                    <ui:repeat value="#{actividadesRequestControlador.tareaActividadModeloLista}" var="tareaActvidadModelo" varStatus="conta">
                         <h:panelGroup layout="block" styleClass="uk-width-1-3@m " pt:data-tags="a beautiful landscape - nature outdoor">
                             <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border ${tareaActvidadModelo.pendiente ? '' : 'desactivado'}"><!-- clase desactivado-->
                                 <div class="uk-card-header border-card">
@@ -113,9 +113,9 @@
                                     </div>
                                 </div>
                                 <div class="uk-card-footer uk-text-center">
-                                    <h:form styleClass="">
-                                        <h:commandButton styleClass="boton" action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="#{alumno['dashboard.homework']}"/>
-                                    </h:form>
+                                    <h:button styleClass="boton" value="#{alumno['dashboard.homework']}" outcome="actividad">
+                                        <f:param name="idTarea" value="#{tareaActvidadModelo.id}"/>
+                                    </h:button>
                                 </div>
                             </div>
                         </h:panelGroup>
