--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -59,10 +59,11 @@
         </div>
         <div class="left-nav-wrap  uk-visible@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-large-top">
+                <!--     Modificar aquí las actividades.     -->
                 <li uk-tooltip="title: #{alumno['for.all.views.dashboard']}; pos: right" class="uk-active"><h:link outcome="dashboard" ><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/tierra.svg" width="70" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.activity']}; pos: right">
-                    <h:link outcome="activities" rendered="#{not empty alumnoControlador.tareaActvidadModeloLista}"><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta1.svg" width="70" alt="" /></h:link>
-                    <h:graphicImage rendered="#{empty alumnoControlador.tareaActvidadModeloLista}" url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta1.svg" width="70" alt="" />
+                    <h:link outcome="activities" rendered="#{not empty actividadesControlador.tareaActividadModeloLista}"><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta1.svg" width="70" alt="" /></h:link>
+                    <h:graphicImage rendered="#{empty actividadesControlador.tareaActividadModeloLista}" url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta1.svg" width="70" alt="" />
                 </li>
                 <li uk-tooltip="title: #{alumno['for.all.views.library']}; pos: right"><h:link outcome="free-library"><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta5.svg" width="70" alt="" /></h:link></li>
             </ul>
@@ -71,8 +72,8 @@
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-small-top">
                 <li uk-tooltip="title: #{alumno['for.all.views.dashboard']}; pos: right" class="uk-active"><h:link outcome="dashboard" ><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/tierra.svg" width="60" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['for.all.views.activity']}; pos: right" >
-                    <h:link outcome="activities" rendered="#{not empty alumnoControlador.tareaActvidadModeloLista}"><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta1.svg" width="60" alt=""/></h:link>
-                    <h:graphicImage rendered="#{empty alumnoControlador.tareaActvidadModeloLista}" url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta1.svg" width="60"/>
+                    <h:link outcome="activities" rendered="#{not empty actividadesControlador.tareaActividadModeloLista}"><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta1.svg" width="60" alt=""/></h:link>
+                    <h:graphicImage rendered="#{empty actividadesControlador.tareaActividadModeloLista}" url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta1.svg" width="60"/>
                 </li>
                 <li uk-tooltip="title: #{alumno['for.all.views.library']}; pos: right"><h:link outcome="free-library"><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/planetas/planeta5.svg" width="60" alt=""/></h:link></li>
             </ul>
@@ -94,6 +95,7 @@
                                          <h:graphicImage styleClass="uk-border-circle" width="50" height="50" url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/morado.svg"/>
                                      </div>
                                      <div class="uk-width-expand">
+                                         <!--     Alumno controlador Modificar       -->
                                          <h3 class="uk-card-title uk-margin-remove-bottom uk-text-small uk-text-uppercase uk-text-bold"> #{alumnoControlador.alumnoModelo.nombre} #{alumnoControlador.alumnoModelo.apellidoPaterno} #{alumnoControlador.alumnoModelo.apellidoMaterno}</h3>
                                          <p class="uk-text-meta uk-margin-remove-top uk-text-small"><span> #{alumnoControlador.alumnoModelo.apodo}</span></p>
                                      </div>
@@ -154,18 +156,19 @@
                          </div>
                      </div>
                  </h:panelGroup>
-                <h1 class="lescuadron letra-titulo uk-text-center primera-mayuscula">#{empty alumnoControlador.tareaActvidadModeloLista ? alumno['dashboard.not.homework'] : alumno['dashboard.homework.done']}</h1>
+                <h1 class="lescuadron letra-titulo uk-text-center primera-mayuscula">#{empty actividadesControlador.tareaActividadModeloLista ? alumno['dashboard.not.homework'] : alumno['dashboard.homework.done']}</h1>
                 <div>
                     <h:form id="formulario-tarea" styleClass="formulario-tareas-progreso" >
                         <h:selectOneRadio value="#{tareasProgresoControlador.idTarea}">
-                            <f:selectItems value="#{alumnoControlador.tareaActvidadModeloLista}" var="tareaActividad"  itemLabel="#{tareaActividad.idActividad}" itemValue="#{tareaActividad.id}"/>
+                            <f:selectItems value="#{actividadesControlador.tareaActividadModeloLista}" var="tareaActividad"  itemLabel="#{tareaActividad.idActividad}" itemValue="#{tareaActividad.id}"/>
                             <f:ajax event="change" listener="#{tareasProgresoControlador.buscaTareasRealizadas}" execute="@form" render="tareas tareas2 video-actividad"/>
                         </h:selectOneRadio>
                     </h:form>
+                    <!--       Alumno Controlador modificar to ViewScoped       -->
                     <ul>
                         <li>
-                            <h:panelGroup layout="block" styleClass="vacio" rendered="#{empty alumnoControlador.tareaActvidadModeloLista}">#{alumno['dashboard.empty']}</h:panelGroup>
-                            <h:panelGroup id="tareas" layout="block" styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="" rendered="#{not empty alumnoControlador.tareaActvidadModeloLista}">
+                            <h:panelGroup layout="block" styleClass="vacio" rendered="#{empty actividadesControlador.tareaActividadModeloLista}">#{alumno['dashboard.empty']}</h:panelGroup>
+                            <h:panelGroup id="tareas" layout="block" styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="" rendered="#{not empty actividadesControlador.tareaActividadModeloLista}">
                                 <div class="imagen-flexible uk-inline-clip uk-transition-toggle" tabindex="0">
                                     <div class="uk-margin-remove">
                                         <h:panelGroup layout="block" styleClass="uk-inline" pt:uk-lightbox="">
@@ -224,7 +227,7 @@
                                     </h:panelGroup>
                                 </div>
                             </h:panelGroup>
-                            <h:panelGroup id="tareas2" layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-grid" pt:uk-grid="" rendered="#{not empty alumnoControlador.tareaActvidadModeloLista}">
+                            <h:panelGroup id="tareas2" layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-grid" pt:uk-grid="" rendered="#{not empty actividadesControlador.tareaActividadModeloLista}">
                                 <div class="fondo-comic" style="border: 6px solid white; padding: 0;">
                                     <div class="imagen-flexible uk-inline-clip uk-transition-toggle" tabindex="0">
                                             <div class="uk-margin-remove">
